--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,11 @@
 	margin: 0;
 	padding: 0;
 	box-sizing:border-box;
+	outline: none;
+}
+
+html {
+	font-size: 62.5%;
 }
 
 body {
@@ -9,12 +14,95 @@ body {
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
-}
-
-#password-generator {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	min-height: 100vh;
+	font-size: 2.4rem;
+}
+::placeholder {
+	color: #fff;
+	font-size:1.5rem;
 }
 
+#password-generator {
+	text-align: center;
+	color: #fff;
+	
+}
+
+#main-content {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	gap: 1rem;
+	max-width: 400px;
+	margin: 5rem auto 0 auto;
+}
+
+#password {
+	padding: 0.5rem;
+	background:transparent;
+	border-left: none;
+	border-top: none;
+	border-right: none;
+	border-bottom: 1px solid #71FFFF;
+	color: #fff;
+	font-size: 2rem;
+}
+
+h4 {
+	padding-top:2rem;
+}
+
+#demo {
+	padding-bottom:2rem;
+}
+
+#button-generator {
+	padding: 0.5rem;
+	font-size: 1.8rem;
+}
+
+.btn {
+  width: 180px;
+  height: 60px;
+  cursor: pointer;
+  background: transparent;
+  border: 1px solid #91C9FF;
+  outline: none;
+  transition: 1s ease-in-out;
+  position: relative;
+  margin: 0 auto;
+}
+
+svg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  fill: none;
+  stroke: #fff;
+  stroke-dasharray: 150 480;
+  stroke-dashoffset: 150;
+  transition: 1s ease-in-out;
+}
+
+.btn:hover svg {
+  stroke-dashoffset: -480;
+}
+
+.btn span {
+  color: white;
+  font-size: 18px;
+  font-weight: 100;
+}
+
+@media (max-width: 1000px) {
+	html {
+		font-size: 50%;
+	}
+
+	p {
+		padding: 2rem 0;
+	}
+}
